removed db creds

--- a/notebook/mongodb_demo.ipynb
+++ b/notebook/mongodb_demo.ipynb
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d48cf8f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "DB_NAME = \"proj1\"\n",
     "COLLECTION_NAME = \"proj1\"\n",
-    "CONNECTION_URL = \"mongodb+srv://khalidm8746_db_user:dlJOXC4olWMq9CQF@cluster0.0abjrtz.mongodb.net/?appName=Cluster0\"\n"
+    "CONNECTION_URL = \"mongodb+srv://<username>:<password>@cluster0.0abjrtz.mongodb.net/?appName=Cluster0\"\n"
    ]
   },
   {
